# systemd1-broker

./: meson.build
.github/workflows/: build-test.yml  cifuzz.yml  claude-review.yml  coverage.yml  linter.yml  mkosi.yml  unit-tests-musl.yml  unit-tests.yml
docs/: SYSTEMD1_BROKER_SPEC.md
docs/superpowers/plans/: 2026-07-17-systemd1-broker-unit-catalog-sync.md  2026-07-21-systemd1-broker-control-group-metadata.md  2026-07-21-systemd1-broker-dynamic-metadata.md  systemd1-broker-phase1-2.md
docs/superpowers/specs/: 2026-06-22-systemd1-broker-backend-design.md  2026-07-17-systemd1-broker-unit-catalog-sync-design.md  2026-07-21-systemd1-broker-dynamic-metadata-design.md
src/systemd1-broker/: meson.build  systemd1-broker-backend-api.h  systemd1-broker-backend-servicectl.c  systemd1-broker-bus.c  systemd1-broker-bus.h  systemd1-broker-dbus.c  systemd1-broker-dbus.h  systemd1-broker-main.c  systemd1-broker-metadata.c  systemd1-broker-metadata.h  systemd1-broker.c  systemd1-broker.h
src/test/: meson.build  test-systemd1-broker-backend-servicectl.c  test-systemd1-broker.c
